tests/negative-fixtures/external_crate_cannot_call_tui_perception_append_helper/src/lib.rs
pub fn call_tui_perception_append_helper() {
    tracewake_tui::record_current_place_perception_and_project();
}
